src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');

body {
  font-family: 'Roboto', sans-serif;
  background-image: url('bg_m.jpg');
  background-image: -webkit-image-set(
    url("./bg_s.jpg") 1x,
    url("./bg_m.jpg") 2x,
    url("./bg.jpg") 3x);
  background-image: image-set(
    url("./bg_s.jpg") 1x,
    url("./bg_m.jpg") 2x,
    url("./bg.jpg") 3x);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  display: flex;
  justify-content: center;
}

p {
  margin: 0;
}

a {
  color: white;
  text-decoration: none;
}

.main-wrapper {
  height: 100%;
  margin: 0;
  display: flex;
  flex-direction: column;
  color: white;
  justify-content: center;
  align-content: center;
  margin: 20px 0px;
  gap: 10px;
}

.frosted-glass {
  /* backdrop-filter: blur(10px); */
  background-color: rgba(0, 0, 0, 0.5);
  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2);
}

.today-panel {
  max-width: 550px;
  height: fit-content;
  border-radius: 30px;
  display: flex;
  gap: 10px;
  flex-direction: column;
  padding: 25px 40px;
  box-sizing: border-box;
}

.today-status {
  display: grid;
  grid-template-rows: 51px 25px;
  grid-template-columns: 95px 1fr;
}

.today-icon {
  grid-row: 1 / 3;
  font-size: 80px;
  justify-self: left;
}

.config-buttons {
  display: flex;
  gap: 10px;
  float: left;
}

.config-btn {
  border: none;
  padding: 10px;
  border-radius: 30px;
  font-size: 1.5em;
  height: fit-content;
  display: flex;
  color: white;
}

.top-btn p {
  font-weight: 300;
  font-size: 0.85em;
  margin: 0 2px;
}

.today-temp {
  font-size: 40px;
  margin-top: auto;
}

.temp-unit {
  font-weight: 300;
  font-size: 0.7em;
  margin-left: 0.1em;
  vertical-align: top;
  margin-top: 0.12em;
  display: inline-block;
}

.location {
  font-size: 35px;
}

.today-extras {
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(2, 270px);
}

.extra-container {
  display: grid;
  grid-template-rows: 35px 25px;
  grid-template-columns: 60px 1fr;
}

.extra-icon {
  grid-row: 1 / 3;
  font-size: 50px;
  justify-self: left;
  align-self: center;
}

.extra-info {
  margin-top: auto;
  font-size: 25px;
}

.la-long-arrow-alt-up, .la-long-arrow-alt-down {
  margin: 0 -10px;
}

.la-long-arrow-alt-up {
  margin-left: -3px;
}

.overlay {
  background-color: rgba(0, 0, 0, 0.2);
  position: absolute;
  top: 0;
  left: 0;
  height: 100lvh;
  width: 100lvw;
  z-index: 1;
  display: flex;
  backdrop-filter: blur(10px);
  justify-content: center;
}

.search-popup {
  background-color: rgba(255, 255, 255, 0.4);
  border-radius: 15px;
  height: fit-content;
  max-width: 530px;
  width: 100%;
  margin: 20px;
  display: flex;
  flex-direction: column;
  padding: 20px;
  gap: 12px;
}

.location-box {
  width: 100%;
  background-color: rgba(255, 255, 255, 0.6);
  border-radius: 15px;
  display: flex;
  height: 40px;
  overflow: hidden;
}

.text {
  border: none;
  padding: 5px 20px;
  border-radius: 10px;
  background-color: transparent;
  outline: none;
  flex-grow: 1;
}

.submit-btn {
  background-color: white;
  /* border: 2px solid rgb(217, 217, 217); */
  border: none;
  box-shadow: 0px 0px 10px 1px rgb(139, 139, 139);
  border-radius: 15px;
  padding: 0px 20px;
}

.header-box {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.close-btn {
  color: black;
  background-color: white;
  height: fit-content;
  font-size: 1.5em;
  padding: 5px;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.heading {
  margin: 0;
}

.today-panel-wrap {
  display: flex;
  width: fit-content;
  flex-direction: column;
  gap: 10px;
}

.daily-card {
  display: grid;
  grid-template-rows: 20px 23px;
  grid-template-columns: 60px 1fr;
  width: 100%;
  padding: 10px 25px;
  border-radius: 30px;
  gap: 5px;
  box-sizing: border-box;
}

.daily-stats {
  font-size: 23px;
  font-weight: 400;
  display: flex;
  justify-content: space-between;
  max-width: 240px;
}

.forecast-extra-icon {
  margin: 1px;
}

.stat-spacer {
  margin-left: 5px;
}

.forecast-day {
  font-size: 20px;
}

.daily-forecast {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

@media (min-width: 1000px) {
  .main-wrapper {
    flex-direction: row;
  }

  .daily-card {
    min-width: 400px;
  }
}

@media (max-width: 630px) {
  .today-extras {
    grid-template-columns: 1fr;
  }

  .today-panel {
    width: 100%;
    margin-bottom: 0px;
    padding: 20px;
    max-width: none;
  }

  .today-panel-wrap {
    width: 100%;
  }

  .config-buttons {
    margin-left: 10px;
  }

  .main-wrapper {
    width: calc(100% - 20px);;
  }

  .daily-card {
    padding: 15px 20px;
    grid-template-rows: 20px 22px;
    grid-template-columns: 60px 1fr;
  }

  .forecast-day {
    font-size: 20px;
  }

  .forecast-extra-icon {
    font-size: 20px;
  }

  .daily-stats {
    font-size: 20px;
  }

  .stat-spacer {
    margin-left: 0px;
  }
}

.hidden {
  visibility: hidden;
}

